Clear alert changes for oceanstor
